feat: implement test example
